--- a/app/index.html
+++ b/app/index.html
@@ -2,18 +2,16 @@
 <html lang="en" ng-app="halbtonApp">
 <head>
     <meta charset="utf-8">
-    <title>Halbtonabstand</title>
+    <title>Halbtonabstand: v<span app-version></span></title>
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
 </head>
-<body>
+<body style="background-color: rgba(71,128,95,0.40); height: 300px;">
 <!--<ul class="menu">
   <li><a href="#/view1">view1</a></li>
   <li><a href="#/view2">view2</a></li>
 </ul>-->
 
-
-<h1>Halbtonabstand: v<span app-version></span></h1>
 
 <div ng-view></div>
 
