--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 -->
 <script src="lib/angular/angular.js"></script>
 <script src="lib/underscore-min.js"></script>
+<script src="lib/underscore.string.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
 <script src="js/controllers.js"></script>
