--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="halbtonApp">
 <head>
     <meta charset="utf-8">
-    <title>Halbtonabstand: v<span app-version></span></title>
+    <title>Halbtonabstand</title>
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
 </head>
