--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,15 @@
 <html lang="en" ng-app="halbtonApp">
 <head>
     <meta charset="utf-8">
-    <title>Halbtonabstand</title>
+    <title>Halbtonabstand </title>
+
+
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body style="background-color: rgba(71,128,95,0.40); height: 300px;">
+<body class="app">
 <!--<ul class="menu">
   <li><a href="#/view1">view1</a></li>
   <li><a href="#/view2">view2</a></li>
