--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@
     <title>Halbtonabstand </title>
 
 
-
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 
@@ -19,7 +18,18 @@
 
 
 <div ng-view></div>
+<div class="" style="margin-top: 5em">
+    <span>
+        @see
+    </span>
+    <span>
+        <a href="https://github.com/holgergp/halbton">https://github.com/holgergp/halbton</a>
+    </span>
+    <span>
+        <a href="http://www.grosse-plankermann.com">http://www.grosse-plankermann.com</a>
+    </span>
 
+</div>
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 -->
