--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Halbtonabstand </title>
-
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:bold" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
