--- a/app/index.html
+++ b/app/index.html
@@ -5,21 +5,22 @@
     <title>Halbtonabstand </title>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:bold" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 </head>
-<body class="app">
+<body class="app container" >
 <!--<ul class="menu">
   <li><a href="#/view1">view1</a></li>
   <li><a href="#/view2">view2</a></li>
 </ul>-->
 
-
 <div ng-view></div>
-<div class="" style="margin-top: 5em">
+<div class="" style="margin-top: 5em;text-align: center">
     <span>
         @see
     </span>
