--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 </ul>-->
 
 <div ng-view></div>
-<div class="" style="margin-top: 5em;text-align: center">
+<div class="" style="margin-top: 5em;text-align: center;">
     <span>
         @see
     </span>
