Some font awesome icons

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link href="http://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
@@ -22,10 +23,13 @@
 <div ng-view></div>
 <div class="" style="margin-top: 5em;text-align: center;">
     <span>
-        @see
+        <i class="fa fa-github"></i>
     </span>
     <span>
         <a href="https://github.com/holgergp/halbton">https://github.com/holgergp/halbton</a>
+    </span>
+        <span>
+        <i class="fa fa-compass"></i>
     </span>
     <span>
         <a href="http://www.grosse-plankermann.com">http://www.grosse-plankermann.com</a>
