--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en" ng-app="halbtonApp">
+<!DOCTYPE html>
+<html lang="de" ng-app="halbtonApp">
 <head>
     <meta charset="utf-8">
     <title>Halbtonabstand </title>
@@ -7,21 +7,33 @@
     <link href="http://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
+
+
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet/less" href="css/app.less">
+
+
+    <script src="lib/less-1.5.0.min.js"></script>
+
+ <!--   <link rel="stylesheet" href="css/app.css"/>-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 </head>
-<body class="app container" >
+<body class="app container">
 <!--<ul class="menu">
   <li><a href="#/view1">view1</a></li>
   <li><a href="#/view2">view2</a></li>
 </ul>-->
 
 <div ng-view></div>
-<div class="" style="margin-top: 5em;text-align: center;">
+<div class="links">
     <span>
         <i class="fa fa-github"></i>
     </span>
