--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,9 @@
 
 
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet/less" href="css/app.less">
 
-
-    <script src="lib/less-1.5.0.min.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="css/app.less">
+    <script src="lib/less-1.5.0.min.js" type="text/javascript"></script>
 
  <!--   <link rel="stylesheet" href="css/app.css"/>-->
 
