--- a/app/index.html
+++ b/app/index.html
@@ -7,19 +7,19 @@
     <link href="http://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
+
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 
 
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
 
     <link rel="stylesheet/less" type="text/css" href="css/app.less">
-    <script src="lib/less-1.5.0.min.js" type="text/javascript"></script>
+
 
  <!--   <link rel="stylesheet" href="css/app.css"/>-->
 
@@ -50,9 +50,17 @@
 <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 -->
+
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+
 <script src="lib/angular/angular.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/underscore.string.min.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="lib/less-1.5.0.min.js" type="text/javascript"></script>
+
 <script src="js/app.js"></script>
 <script src="js/services.js"></script>
 <script src="js/controllers.js"></script>
