- Grouping by feature not by technical type - guitar as directive

--- a/app/qa/halbtonberechnung.html
+++ b/app/qa/halbtonberechnung.html
@@ -1,5 +1,5 @@
-<div class="row" >
-   <!-- <div class="col-md-2"><i class="fa fa-question fa-5x"></i></div>-->
+<div class="row">
+    <!-- <div class="col-md-2"><i class="fa fa-question fa-5x"></i></div>-->
     <div class="col-md-12 halbtonQuestion">Wenn ich vom
 
         <!--Seems strange to me: http://stackoverflow.com/questions/2547354/how-to-increase-the-height-of-the-select-box-->
@@ -12,7 +12,7 @@
         <input type="number" ng-required="true" ng-maxlength="2" ng-minlength="1" maxlength="2" required="true"
                ng-model="abstand"
                ng-change="berechneZielton(grundton,abstand)" placeholder="einige" style="width: 7em; background:none;"
-               class="" />
+               class=""/>
         Halbtonschritte weiterzähle lande ich bei
 
     </div>
@@ -27,9 +27,11 @@
     <div class="halbtonAnswer col-md-6 col-md-offset-3">
         {{ zielton.targetName }}
     </div>
-   <!--<div class="col-xs-1 col-sm-3 col-md-3"></div>-->
+    <!--<div class="col-xs-1 col-sm-3 col-md-3"></div>-->
 </div>
 
-<div ng-include="'partials/gitarre.html'" class="row">
+
+<div my-guitar class="row"></div>
+<!--<div ng-include="'partials/guitar.html'" class="row">                     -->
 </div>
 
