--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,9 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
 
 
-
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
 
-    <link rel="stylesheet/less" type="text/css" href="css/app.less">
+    <link rel="stylesheet/less" type="text/css" href="assets/css/app.less">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -59,11 +58,18 @@
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="lib/less-1.5.0.min.js" type="text/javascript"></script>
 
-<script src="js/app.js"></script>
-<script src="js/services.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/filters.js"></script>
-<script src="js/directives.js"></script>
+<script src="app.js"></script>
+<script src="version/versionModule.js"></script>
+<script src="version/versionFilter.js"></script>
+<script src="version/versionDirective.js"></script>
+<script src="services/servicesModule.js"></script>
+<script src="services/halftoneService.js"></script>
+<script src="fretboard/fretboardModule.js"></script>
+<script src="fretboard/fretboardController.js"></script>
+<script src="fretboard/fretboardDirective.js"></script>
+<script src="qa/qaModule.js"></script>
+<script src="qa/qaController.js"></script>
+
 
 </body>
 </html>
